# AtHomeServer

./: .gitignore  ARCHITECTURE.md  ATHOMESETUP.md  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  gen_workout.json  gen_workout.py  main.py  package-lock.json  pyproject.toml  pyrightconfig.json
.github/workflows/: deploy.yml
alembic/: env.py
application/: server.py
application/auth/: controller.py  dto.py  service.py  utils.py
application/auth/usecases/: callback.py  login.py
application/files/: controller.py  dto.py  service.py
application/redis/: dto.py  service.py
backend/: .env.example  Dockerfile  Dockerfile.dev  alembic.ini  entrypoint.sh  main.py  pyproject.toml  server.py
backend/application/auth/: cookies.py  dto.py  utils.py
backend/application/files/: service.py
backend/application/gym/: dto.py
backend/application/profile/: dto.py
backend/application/short_urls/: dto.py
backend/application/user_relations/: dto.py
backend/core/: configuration.py
backend/domain/: user.py
core/: configuration.py  env.py
core/common/: result.py
deploy/certs/: localhost.pem
deploy/nginx/: nginx.conf
frontend/: Dockerfile  Dockerfile.dev  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/docs/: STYLE_GUIDE.md
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.vue  main.ts
web/app/: Dockerfile  package-lock.json  package.json  vite.config.ts
web/certs/: localhost-key.pem  localhost.pem
web/endpoints/: __init__.py  auth.py  files.py
web/nginx/: nginx.conf
(+202 files in other folders)
